Added about section.
Formatted items into grids and flexbox. I'm pretty happy with how things
are looking for now.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Severud</title>
+    <link rel="icon" href="static/fav.png" type="image/gif">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,12 +15,20 @@
   <body>
     <div id="header">
       <h1>Joshua Severud</h1>
+      <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » -Jean Paul Sartre</p>
     </div>
 
     <div class="article">
-      <div class="main-content">
-        <h2>A little about me</h2>
-        <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » -Jean Paul Sartre</p>
+      <div class="about">
+        <div class="profile">
+          <img src="static/images/profile.webp" alt="picture of me">
+        </div>
+        <div class="about-text">
+          <h2>About me</h2>
+          <p>A love for reading was instilled into me early on by my parents, and as I grew older, I found that my love for reading hadn’t diminished and that it was able to help me wonder about the world in a meaningful way. I found myself asking questions that had no apparent answers, and I was not equipped with the tools to explore possible answers myself. I would not find these tools until university when I took my first philosophy class on a whim. I discovered a passion for studies, and quickly came to realize that the best way to better myself was to pursue a competency in this newfound discipline.</p>
+          <p>I am interested in 19th and 20th Century philosophy, particularly within the French tradition. My primary focus has been on interpersonal relationships, ethics, existentialism, phenomenology, and responsibility. I am interested in the philosophies of Sartre, Levinas, Heidegger, Camus, Derrida, and Baudrillard. Recently I have been trying to make my way through Merleau-Ponty’s Phenomenology of Perception. Furthermore, I am somewhat troubled by LLMs and their effects on students. Contre Michel Serres, I see this up-and-coming technology as a detriment to thought.</p>
+          <p>Professionally, I hope to explore ideas within phenomenology and existentialism. I am currently interested in the differences in existential thought that arise between Cartesian and non-Cartesian understandings of our existence.</p>
+        </div>
       </div>
       <div class="sidebar">
         <h2>Table of Contents</h2>
