--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
       </div>
       <div class="sidebar">
         <h2>Table of Contents</h2>
-        <p>summary</p>
+        <p>about</p>
         <p>experience</p>
         <p>education</p>
         <p>miscellaneous</p>
+      </div>
+    </div>
+
+    <div id="footer">
+      <div class="credit">
+        <p>Made from scratch</p>
       </div>
     </div>
   </body>
