--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
         <p>education</p>
         <p>miscellaneous</p>
       </div>
+      <h2 id="experience">Experience</h2>
+      <div class="experience">
+        <div class="card">
+          <h3>Adjunct Lecturer</h3>
+          <p>at Minot State University</p>
+          <p class="fade">Fall 2025 - Present</p>
+          <p>I am teaching philosophy online at Minot State University. I teach an ethics and an intro course.</p>
+        </div>
+        <div class="card">
+          <h3>Substitute Teacher</h3>
+          <p>at Grand Forks Public Schools</p>
+          <p class="fade">October 2024 - Present</p>
+          <p>After some family health issues arose, I returned to the U.S. to work as a substitute teacher and prepare my PhD applications. I worked filling in daily as needed, but also worked a couple long-term positions (greater than 20 consecutive days for the same teacher) where I was allowed to teach the course using class material. As a long-term sub I taught engineering, worked in special education, and taught business education.</p>
+        </div>
+        <div class="card">
+          <h3>English Teacher</h3>
+          <p>at PLATO</p>
+          <p class="fade">March 2024 - July 2024</p>
+          <p>After working for six months in South Korea I changed my place of work to give myself more time to work on my interests in philosophy (and computers). At Plato English School I was responsible for four classes: two kindergarten classes during the morning hours of each regular working day, one first grade elementary class four days a week, and a fifth grade elementary class two days a week. I was responsible for designing lesson plans for each day that could incorporate all the teaching goals as defined in the school’s curriculum. Additionally, I created calendars and chose certain materials to be used in class. Notably, the older students that I taught were able to have debates where I used the skills I learned from studying philosophy to encourage, enrich, and push students further while debating each other.</p>
+        </div>
+        <div class="card">
+          <h3>English Teacher</h3>
+          <p>at WILS</p>
+          <p class="fade">September 2023 - February 2024</p>
+          <p>When I arrieved in South Korea I started work at WILS Lanugage School. At WILS, I designed and managed courses while teaching students at a variety of different levels and ages (from 10 to 16 with the majority of my work being with students somewhere in the middle of that range). I was also involved in various administrative tasks including website maintenance, acting as a hiring manager, and brokering a number of external deals (e.g., franchising, tutoring partnerships).</p>
+        </div>
+        <div class="card">
+          <h3>Adjunct Lecturer</h3>
+          <p>at Louisiana State University</p>
+          <p class="fade">Fall 2022</p>
+          <p>While completing my master’s at Louisiana State University, I was asked to teach a sophomore-level ethics course in the philosophy department in addition to my regular student and GTA obligations. As the lecturer of my ethics course, I designed a syllabus and gave students an introduction to the topic to great success. We covered utilitarianism, virtue ethics, and deontology before moving on to existentialism and Levinasian ethics.</p>
+        </div>
+      </div>
     </div>
 
     <div id="footer">
