--- a/index.html
+++ b/index.html
@@ -74,7 +74,15 @@
 
     <div id="footer">
       <div class="credit">
-        <p>Made from scratch</p>
+        <p>made from scratch</p>
+        <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="static/images/icons/github-mark-white.svg" alt="Github"></a>
+      </div>
+      <div class="contact">
+        <p>find me other places</p>
+        <div class="socials">
+          <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="static/images/icons/InBug-White.png" alt="LinkedIn"></a>
+          <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
+        </div>
       </div>
     </div>
   </body>
