Added listenbrainz to footer
Changed also the way that the size of the icon is determined because it
was messing with the alignment of the text in the footer.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="socials">
           <a href="https://www.linkedin.com/in/joshua-severud-389014164" target="_blank"><img class="icon" src="static/images/icons/InBug-White.png" alt="LinkedIn"></a>
           <a href="https://letterboxd.com/Forkentiney/" target="_blank"><img class="icon" src="static/images/icons/letterboxd-white.svg" alt="Letterboxd"></a>
+          <a href="https://listenbrainz.org/user/Forkentiney" target="_blank"><img class="icon" src="static/images/icons/listenbrainz-color.svg" alt="ListenBrainz"></a>
         </div>
       </div>
     </div>
