Started work on Education section.
Also added styling for <em> (italic). The header is NOT where I want it
for now. Trying to figure out how to align the Sartre quote with my name
  so that the feel of the page is better.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
   <body>
     <div id="header">
-      <h1>Joshua Severud</h1>
-      <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » -Jean Paul Sartre</p>
+      <div class="titles">
+        <h1>Joshua Severud</h1>
+        <p>« J’existe par ce que je pense… et je ne peux pas m’empêcher de penser. » - <em>Jean Paul Sartre</em></p>
+      </div>
     </div>
 
     <div class="article">
@@ -37,7 +39,7 @@
         <p>education</p>
         <p>miscellaneous</p>
       </div>
-      <h2 id="experience">Experience</h2>
+      <h2 id="section-title">Experience</h2>
       <div class="experience">
         <div class="card">
           <h3>Adjunct Lecturer</h3>
@@ -68,6 +70,16 @@
           <p>at Louisiana State University</p>
           <p class="fade">Fall 2022</p>
           <p>While completing my master’s at Louisiana State University, I was asked to teach a sophomore-level ethics course in the philosophy department in addition to my regular student and GTA obligations. As the lecturer of my ethics course, I designed a syllabus and gave students an introduction to the topic to great success. We covered utilitarianism, virtue ethics, and deontology before moving on to existentialism and Levinasian ethics.</p>
+        </div>
+      </div>
+      <h2 id="section-title">Education</h2>
+      <div class="education">
+        <div class="card">
+          <h3>Master of Philosophy</h3>
+          <p>Louisiana State University</p>
+          <p class="fade">Fall 2021 - Spring 2023</p>
+          <p class="fade">GPA: <em>4.0 of 4.0</em></p>
+          <p>At LSU I focused on 19th and 20th century French thought and as such worked with Dr. François Raffoul on my thesis. I was able to better explore my interests in interpersonal relationships and ethics. I focused my attention on Levinas’s ethics, Heidegger’s ontology, and Derrida’s event. My thesis was called “The Possibility of Relationships with Others”. Additionally, while completing my master’s I also worked as a GTA which meant that I was responsible for grading students’ work and taking attendance. I also helped to teach some classes, and learned a lot from the experience.</p>
         </div>
       </div>
     </div>
