--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="about-text">
           <h2>About me</h2>
           <p>A love for reading was instilled into me early on by my parents, and as I grew older, I found that my love for reading hadn’t diminished and that it was able to help me wonder about the world in a meaningful way. I found myself asking questions that had no apparent answers, and I was not equipped with the tools to explore possible answers myself. I would not find these tools until university when I took my first philosophy class on a whim. I discovered a passion for studies, and quickly came to realize that the best way to better myself was to pursue a competency in this newfound discipline.</p>
-          <p>I am interested in 19th and 20th Century philosophy, particularly within the French tradition. My primary focus has been on interpersonal relationships, ethics, existentialism, phenomenology, and responsibility. I am interested in the philosophies of Sartre, Levinas, Heidegger, Camus, Derrida, and Baudrillard. Recently I have been trying to make my way through Merleau-Ponty’s Phenomenology of Perception. Furthermore, I am somewhat troubled by LLMs and their effects on students. Contre Michel Serres, I see this up-and-coming technology as a detriment to thought.</p>
+          <p>I am interested in 19th and 20th Century philosophy, particularly within the French tradition. My primary focus has been on interpersonal relationships, ethics, existentialism, phenomenology, and responsibility. I am interested in the philosophies of Sartre, Levinas, Heidegger, Camus, Derrida, and Baudrillard. Recently I have been trying to make my way through Merleau-Ponty’s <em>Phenomenology of Perception</em>. Furthermore, I am somewhat troubled by LLMs and their effects on students. Contre Michel Serres, I see this up-and-coming technology as a detriment to thought.</p>
           <p>Professionally, I hope to explore ideas within phenomenology and existentialism. I am currently interested in the differences in existential thought that arise between Cartesian and non-Cartesian understandings of our existence.</p>
         </div>
       </div>
@@ -80,6 +80,19 @@
           <p class="fade">Fall 2021 - Spring 2023</p>
           <p class="fade">GPA: <em>4.0 of 4.0</em></p>
           <p>At LSU I focused on 19th and 20th century French thought and as such worked with Dr. François Raffoul on my thesis. I was able to better explore my interests in interpersonal relationships and ethics. I focused my attention on Levinas’s ethics, Heidegger’s ontology, and Derrida’s event. My thesis was called “The Possibility of Relationships with Others”. Additionally, while completing my master’s I also worked as a GTA which meant that I was responsible for grading students’ work and taking attendance. I also helped to teach some classes, and learned a lot from the experience.</p>
+        </div>
+        <div class="card">
+          <h3>Language Program</h3>
+          <p>Université Catholique de Lyon</p>
+          <p class="fade">Spring 2021 - Summer 2021</p>
+          <p>At UCLy, I studied French in order to jump-start my language ability before graduate school. I achieved a language level of B1, but have continued improving since.</p>
+        </div>
+        <div class="card">
+          <h3>Bachelor of Arts</h3>
+          <p>University of North Dakota</p>
+          <p class="fade">Fall 2017 - Fall 2020</p>
+          <p class="fade">GPA: <em>3.612 of 4.0</em></p>
+          <p>At UND I discovered philosophy and explored my interests in my English classes. I double majored in philosophy and English, the focus of the latter being English literature (as opposed to American literature).</p>
         </div>
       </div>
     </div>
