--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
       </div>
       <div class="sidebar">
         <h2>Table of Contents</h2>
-        <p>about</p>
-        <p>experience</p>
-        <p>education</p>
-        <p>miscellaneous</p>
+        <a>about</a>
+        <a>experience</a>
+        <a>education</a>
+        <a>miscellaneous</a>
+        <br>
+        <h2>Quick Links</h2>
+        <a href="content/cv.html">cirriculum vitae</a>
+        <a href="content/thesis.html">master's thesis</a>
       </div>
       <h2 id="section-title">Experience</h2>
       <div class="experience">
@@ -45,7 +49,7 @@
           <h3>Adjunct Lecturer</h3>
           <p>at Minot State University</p>
           <p class="fade">Fall 2025 - Present</p>
-          <p>I am teaching philosophy online at Minot State University. I teach an ethics and an intro course.</p>
+          <p>I am teaching philosophy online at Minot State University. I teach ethics and introdouction to philosophy.</p>
         </div>
         <div class="card">
           <h3>Substitute Teacher</h3>
