--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="article">
-      <div class="about">
+      <div id="about">
         <div class="profile">
           <img src="static/images/profile.webp" alt="picture of me">
         </div>
@@ -34,17 +34,17 @@
       </div>
       <div class="sidebar">
         <h2>Table of Contents</h2>
-        <a>about</a>
-        <a>experience</a>
-        <a>education</a>
-        <a>miscellaneous</a>
+        <a href="#about">about</a>
+        <a href="#experience">experience</a>
+        <a href="#education">education</a>
+        <a href="#miscellaneous">miscellaneous</a>
         <br>
         <h2>Quick Links</h2>
         <a href="content/cv.html">cirriculum vitae</a>
         <a href="content/thesis.html">master's thesis</a>
       </div>
       <h2 id="section-title">Experience</h2>
-      <div class="experience">
+      <div id="experience">
         <div class="card">
           <h3>Adjunct Lecturer</h3>
           <p>at Minot State University</p>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <h2 id="section-title">Education</h2>
-      <div class="education">
+      <div id="education">
         <div class="card">
           <h3>Master of Philosophy</h3>
           <p>Louisiana State University</p>
