Added template for cv page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="#miscellaneous">miscellaneous</a>
         <br>
         <h2>Quick Links</h2>
+        <a href="index.html">home</a>
         <a href="content/cv.html">cirriculum vitae</a>
         <a href="content/thesis.html">master's thesis</a>
       </div>
@@ -102,6 +103,10 @@
     </div>
 
     <div id="footer">
+      <div class="license">
+        <p>license</p>
+        <a href="https://www.gnu.org/licenses/gpl-3.0.html#license-text" target="_blank">GNU GPLv3</a>
+      </div>
       <div class="credit">
         <p>made from scratch</p>
         <a href="https://github.com/forkentiney/" target="_blank"><img class="icon" src="static/images/icons/github-mark-white.svg" alt="Github"></a>
@@ -116,5 +121,4 @@
       </div>
     </div>
   </body>
-
 </html>
