Added basic CV page.
Not happy with this for now. Content and layout are bad. Needs to be
refined.

--- a/content/cv.html
+++ b/content/cv.html
@@ -21,7 +21,56 @@
     </div>
 
     <div class="article">
-        <div class="sidebar">
+      <div class="paper">
+        <div class="cv-head">
+          <div class="titles">
+            <h2>Joshua Severud, M.A.</h2>
+          </div>
+          <div class="contact">
+            <a href="mailto:contact@joshuaseverud.com">contact@joshuaseverud.com</a>
+          </div>
+        </div>
+        <div class="cv-section">
+          <h3>Experience</h3>
+          <p>Adjunct Lecturer, Minot State University (Fall 2025-Present)</p>
+          <p>Substitute Teacher, Grand Forks Public Schools (September 2024-Present)</p>
+          <p>English as a Foreign Language Teacher, Seoul, South Korea (September 2023-July 2024)</p>
+          <p>Adjunct Lecturer, Louisiana State University (Fall 2022)</p>
+          <p>Graduate Teaching Assistant, Louisiana State University (Fall 2021-Spring 2023)</p>
+          <p>Teaching Assistant, University of North Dakota (Fall 2020)</p>
+        </div>
+        <div class="cv-section">
+          <h3>Education</h3>
+          <p>M.A., Philosophy, Louisiana State Unviersity (May 2023)</p>
+          <p>Language Program, French, Université Catholique de Lyon (July 2021)</p>
+          <p>B.A., Philosophy & English, University of North Dakota (December 2020)</p>
+        </div>
+        <div class="cv-section">
+          <h3>Language Ability</h3>
+          <p>English, native</p>
+          <p>French, CEFR B1</p>
+        </div>
+        <div class="cv-section">
+          <h3>Honors and Awards</h3>
+          <p>Graduate Teaching Assistantship (2021)</p>
+          <p>Gerald Potter Scholarship (2020)</p>
+          <p>K&B Tiffany Scholarship (2020)</p>
+          <p>UND Academic Achievement Scholarship (2017)</p>
+          <p>ND Academic Scholarship(2017)</p>
+          <p>CompTIA IT Essentials 3rd Place Prize (2016)</p>
+        </div>
+        <div class="cv-section">
+          <h3>Interests</h3>
+          <p>Linux administration/systems</p>
+          <p>Open-source software</p>
+          <p>Computer hardware</p>
+          <p>Networking</p>
+          <p>Intersubjectivity and ethics</p>
+          <p>Existentialism and phenomenology (esp. freedom)</p>
+          <p>Postmodernism (e.g., Baudrillard)</p>
+        </div>
+      </div>
+      <div class="sidebar">
         <h2>Quick Links</h2>
         <a href="../index.html">home</a>
         <a href="cv.html">cirriculum vitae</a>
