Added sidebar to thesis.html

--- a/content/thesis.html
+++ b/content/thesis.html
@@ -21,7 +21,13 @@
     </div>
 
     <div class="article">
-        <h2 style="grid-column: 2; color: var(--font); display: flex; justify-content: center; align-items: center;">Work in progress... please standby</h2>
+      <h2 style="grid-column: 2; color: var(--font); display: flex; justify-content: center; align-items: center;">Work in progress... please standby</h2>
+      <div class="sidebar">
+        <h2>Quick Links</h2>
+        <a href="../index.html">home</a>
+        <a href="cv.html">cirriculum vitae</a>
+        <a href="thesis.html">master's thesis</a>
+      </div>
     </div>
 
     <div id="footer">
