Formatted thesis and cv
Changed font sizes to be relative

--- a/content/thesis.html
+++ b/content/thesis.html
@@ -27,6 +27,7 @@
           <a href="../index.html">home</a>
           <a href="cv.html">cirriculum vitae</a>
           <a href="thesis.html">master's thesis</a>
+          <br>
           <h2>Table of Contents</h2>
           <a href="#abstract">Abstract</a>
           <a href="#introduction">Introduction</a>
@@ -41,20 +42,18 @@
 
           <div id=subtitle>
             <p>A Thesis</p>
-          
+            <br>
             <p>Submitted to the Graduate Faculty of the</p>
             <p>Louisiana State University and</p>
             <p>Agricultural and Mechanical College</p>
             <p>in partial fulfillment of the</p>
             <p>requirements for the degree of</p>
             <p>Master of Arts</p>
-
+            <br>
             <p>in</p>
-
+            <br>
             <p>The Department of Philosophy and Religious Studies</p>
-          </div>
-
-          <div id=thesis-credit>
+            <br>
             <p>by</p>
             <p>Joshua Severud</p>
             <p>B.A., University of North Dakota, 2020</p>
@@ -137,7 +136,7 @@
           <p>As I’ve been discussing here, the nature of hospitality must be absolutely unconditional, joyous, and must recognize the Other in their individuality without becoming something mechanical or expected for it to be truly hospitality. This is reflected in Derrida’s discussion of Levinas’s notion of hospitality where he notes that “[t]he welcome cannot be derived, no more than the face can, and there is no face without welcome”.97 As we’ll see, the true nature of hospitality, and therefore the experience of the face, is founded in impossibility. I think, also, that this structure works well within Levinas’s line of thinking since hospitality, or the welcoming of the other is “a welcome of an infinite”. That is, the Same “welcomes or receives the other beyond its own finite capacities of welcoming”.98 On the face of things this is, of course, impossible. As Derrida also notes, “We must first think the possibility of the welcome in order to think the face and everything that opens up or is displaced with it”.99 In order to understand why this must be the case, and why hospitality among other things are only possible in their impossibility, we must turn to Derrida’s notion of the event since the concept of the event will allow us to think about possibility in terms of impossibility.</p>
 
           <h3>2. The Other as Event</h3>
-          <p>2.1 The Event</p>
+          <h4>2.1 The Event</h4>
           <p>Central to Derrida’s thinking is his notion of the event. It is in the event where we can begin to glimpse the true function of Levinas’s notion of the face. For Derrida, the event is something that “implies surprise, exposure, the unanticipatable”.100 The event is, at its core, something that in its impossibility becomes possible. Derrida says that “if there is an event, it must never be something that is predicted or planned, or even really decided upon”.101 Derrida describes a scenario in which one says “yes” to the Other, something he says “may not be unrelated” to the way one would say “yes” to the event. Furthermore, he says that it is the saying “‘yes’ to what comes, to letting-it-come”, and that “[t]he event is also what comes, what happens”,102 or in other words, a saying “yes” to the event. It seems, then, that the event is something one must be open to. One must be willing to let the event happen to them, for in fact, there is no other way to experience something that one cannot prepare for.</p>
           <p>	Another facet of the event is that it is “absolutely singular”. That is, it cannot be repeated, nor can it be described.103 Derrida says that in our attempt to convey the event outside of its actual occurrence, “[e]vent making is covertly being substituted for event-saying”.104 There is no way to convey the happening of the event because doing so would reduce the event to the Same (to use a Levinasian term), an impossible act. The event is irreducible and so therefore, in some sense, incomprehensible. It will always surpass the finite capabilities of a subject to understand, much like Levinas’s conception of the Other.</p>
           <p>	To explain further his notion of the event, Derrida offers several examples of what could be an event. Of course, for the purposes of my argument here, Derrida’s explanation of hospitality as the event will be most useful. To reiterate, the event is something that must come as a surprise. The very nature of the event is that it must first appear to be impossible. This is perfect for my argument, then, because hospitality and a relationship with others is at this point understood to be impossible.</p>
@@ -146,64 +145,65 @@
           <p>	Derrida also discusses at length the notion of the event in which the arrivant comes down from on high, from above, or from somewhere else unexpectedly. He describes the vertical coming of the Other in opposition to the traditional phenomenological description of things appearing on the horizon. He does this, as does Levinas, because of the unexpected nature of the event. If the Other were to appear upon the horizon, one could see them coming and be prepared. As a true event, pure or absolute hospitality occurs when you cannot see the other coming. Derrida says, “I insist on the verticality of this coming, because surprise can only come from on high”.107 Without this verticality of the Other, the event could not occur because “[t]he event can only seem to me to be impossible before it occurs”.108 The point that Derrida is making here is that for the event to occur, it must not appear upon my horizon. It’s something that I can never see coming.</p>
           <p>Raffoul points out that the event is something that “does not appear on the horizon from where I may be able to fore-see it, anticipate it: rather, an event falls upon me, comes from above, vertically, and is an absolute surprise”.109 There is certainly more to be said about the vertical break from the horizon including that it need not come only from above but also from behind, below, or otherwise. However, the important thing to note is that the event is just that which is unforeseeable and is always surprising when it occurs. For now, however, with this understanding of the event, we can begin to apply it to our previously discussed concept of the face and further our understanding of its significance.</p>
 
-          <h3>2.2 Everyday Relationships with Others</h3>
+          <h4>2.2 Everyday Relationships with Others</h4>
           <p>Up until this point I have discussed Levinas’s conception of the absolute Other along with the experience of the face, both Levinas’s and Derrida’s notions of hospitality, and finally Derrida’s notion of the event. To quickly summarize, for Levinas, the face of the Other is what calls us to responsibility and therefore hospitality for them. Alongside Levinas’s conception of hospitality, we were able to use Derrida’s similar line of thought to explore the idea of unconditional hospitality which we have seen to be the event. That is to say, hospitality is something that becomes possible only in its impossibility, only when it is carried out without expectation or preparation, as a complete surprise to the host.</p>
           <p>Of course, as I’ve argued through Levinas’s philosophical thought, ethics must lie at the center of our relationships with others. However, Levinas’s philosophy offers not the possibility of a relationship with others, but rather the impossibility of one: a non-relation. This is because of our inability to grasp that which goes beyond what we can possibly understand, namely the Other. In this way it is impossible to have a relationship with an other that keeps a focus on ethics, responsibility, and hospitality. This is a problem that I turned to Derrida to resolve. Derrida argues that “ethics can only happen as impossible. The impossible is the very possibility of ethics”.110</p>
           <p>	It is my proposition, then, to look back to Levinas’s conception of the face in relation to the event. It seems to me that the experience of the face and consequently the experience of the Other, if it is to be authentic, must happen as an event. The apparition of the face and the subject’s subsequent confrontation with infinity, with something outside of the chez-soi. It must first appear to be impossible. To look at the face of the Other is to encounter something completely incomprehensible, and therefore, much like the event, can never be retold or repeated. I think, with this approach to the face of the Other, one could never make the mistake of categorizing the Other and reducing them to the Same. In this way it will be possible to uphold an ethics of the Other as the centerpiece of our relations with them. It is as Levinas says, “The face of the Other at each moment destroys and overflows the plastic image it leaves me”.111 It is in the very unknowing of the Other that one can fully accept and say yes to the other. Any reduction of the other that Levinas prohibits will always be a failure of "knowing". Therefore, only insofar that knowledge hasn't been achieved in regard to the Other is the Other appreciated in a truly ethical and hospitable way. In other words, only in its impossibility is a relationship with the Other possible.</p>
           <p>With this in mind, I think it is clear to see that the apparition of the face of the Other, which appears as the arrivant, fits nicely into Derrida’s idea of the event. The apparition of the face must always be unexpected; the Other descends upon us from above or otherwise outside of our horizon of expectations. The Other can never be subsumed into the Same and they will always remain outside of our grasp, our understanding. The face of the Other, or rather, the discourse made possible by the face of the Other should be thought of as an event. The confrontation with the Other and the subsequent welcoming of the Other must also be thought of as an event. It is the event of encountering the Other, encountering something previously unthought and impossible that grounds hospitality and leads to Levinas’s idea of our ethical responsibility towards the Other. Furthermore, I think this connection will be useful in a longer, more sustained discussion about the nature of the relationship between the Same and the Other that, for now, is outside of the scope of this project. However, we may say for the moment that if any relationship with the Other is possible, it is possible only in its impossibility.</p>
 
           <h2 id="bibliography">Bibliography</h2>
-          <p>Bloechl, Jeffrey. “Words of Welcome: Hospitality in the Philosophy of Emmanuel Levinas”. Phenomenologies of the Stranger: Between Hostility and Hospitality. Edited by Richard Kearney and Kascha Semonovitch, 232–241. New York: Fordham University Press, 2011.</p>
+          <div class="hanging">
+            <p>Bloechl, Jeffrey. “Words of Welcome: Hospitality in the Philosophy of Emmanuel Levinas”. Phenomenologies of the Stranger: Between Hostility and Hospitality. Edited by Richard Kearney and Kascha Semonovitch, 232–241. New York: Fordham University Press, 2011.</p>
 
-          <p>Davis, Colin. Levinas: An Introduction. Indiana: Notre Dame Press, 2007.</p>
+            <p>Davis, Colin. Levinas: An Introduction. Indiana: Notre Dame Press, 2007.</p>
 
-          <p>Derrida, Jacques. “A Certain Impossible Possibility of Saying the Event”. Critical Inquiry 33, no. 2 (2007): 441–61.</p>
+            <p>Derrida, Jacques. “A Certain Impossible Possibility of Saying the Event”. Critical Inquiry 33, no. 2 (2007): 441–61.</p>
 
-          <p>Derrida, Jacques. Acts of Religion. Edited by Gil Anidjar. New York: Routledge, 2010.</p>
+            <p>Derrida, Jacques. Acts of Religion. Edited by Gil Anidjar. New York: Routledge, 2010.</p>
 
-          <p>Derrida, Jacques. Adieu to Emmanuel Levinas. Translated by Pascale-Anne Brault and Michael Naas. Stanford: Stanford University Press, 1999.</p>
+            <p>Derrida, Jacques. Adieu to Emmanuel Levinas. Translated by Pascale-Anne Brault and Michael Naas. Stanford: Stanford University Press, 1999.</p>
 
-          <p>Derrida, Jacques. “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida,” Questioning Ethics Contemporary Debates in Philosophy. Edited by Richard Kearney and Mark Dooley. London: Routledge, 1999.</p>
+            <p>Derrida, Jacques. “Hospitality, Justice and Responsibility: a Dialogue with Jacques Derrida,” Questioning Ethics Contemporary Debates in Philosophy. Edited by Richard Kearney and Mark Dooley. London: Routledge, 1999.</p>
 
-          <p>Derrida, Jacques. Paper Machine. Translated by Rachel Bowlby. Stanford: Stanford University Press, 2005.</p>
+            <p>Derrida, Jacques. Paper Machine. Translated by Rachel Bowlby. Stanford: Stanford University Press, 2005.</p>
 
-          <p>Derrida, Jacques. The Animal That Therefore I Am. Edited by Marie-Louise Mallet. New York: Fordham University Press, 2010.</p>
+            <p>Derrida, Jacques. The Animal That Therefore I Am. Edited by Marie-Louise Mallet. New York: Fordham University Press, 2010.</p>
 
-          <p>Eubanks, Cecil L. and Gauthier, David J. “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”. History of Political Thought 32, no. 1 (2001): 125–146.</p>
+            <p>Eubanks, Cecil L. and Gauthier, David J. “The Politics of the Homeless Spirit: Heidegger and Levinas on Dwelling and Hospitality”. History of Political Thought 32, no. 1 (2001): 125–146.</p>
 
-          <p>France-Lanord, Hadrien. “Martin Heidegger et la question de l’autre : II. Le partage de l’être”. Heidegger Studies 21 (2005): 111–131.</p>
+            <p>France-Lanord, Hadrien. “Martin Heidegger et la question de l’autre : II. Le partage de l’être”. Heidegger Studies 21 (2005): 111–131.</p>
 
-          <p>Guenther, Lisa. “Le Flair Animal: Levinas and the Possibility of Animal Friendship”. PhaenEx 2, no. 2 (2007): 216–238.</p>
+            <p>Guenther, Lisa. “Le Flair Animal: Levinas and the Possibility of Animal Friendship”. PhaenEx 2, no. 2 (2007): 216–238.</p>
 
-          <p>Heidegger, Martin. Being and Time. Translated by John Macquarrie and Edward Robinson. New York: Harper & Row, 1962.</p>
+            <p>Heidegger, Martin. Being and Time. Translated by John Macquarrie and Edward Robinson. New York: Harper & Row, 1962.</p>
 
-          <p>Kearney, Richard and Semonovitch, Kascha. “At the Threshold”. In Phenomenologies of the Stranger: Between Hostility and Hospitality, eds. Richard Kearney and Kascha Semonovitch, 3–29. New York: Fordham University Press, 2011.</p>
+            <p>Kearney, Richard and Semonovitch, Kascha. “At the Threshold”. In Phenomenologies of the Stranger: Between Hostility and Hospitality, eds. Richard Kearney and Kascha Semonovitch, 3–29. New York: Fordham University Press, 2011.</p>
 
-          <p>Levinas, Emmanuel. Entre Nous. Translated by Michael B. Smith and Barbara Harshav. New York: Columbia University Press, 1998.</p>
+            <p>Levinas, Emmanuel. Entre Nous. Translated by Michael B. Smith and Barbara Harshav. New York: Columbia University Press, 1998.</p>
 
-          <p>Levinas Emmanuel. Éthique et infini. Paris: Le Livre de Poche, 1984.</p>
+            <p>Levinas Emmanuel. Éthique et infini. Paris: Le Livre de Poche, 1984.</p>
 
-          <p>Levinas, Emmanuel, and Philippe Nemo. Ethics and Infinity: Conversations with Philippe Nemo. Translated by Richard A. Cohen. Pennsylvania: Duquesne University Press, 2011.</p>
+            <p>Levinas, Emmanuel, and Philippe Nemo. Ethics and Infinity: Conversations with Philippe Nemo. Translated by Richard A. Cohen. Pennsylvania: Duquesne University Press, 2011.</p>
 
-          <p>Levinas, Emmanuel. Otherwise than Being. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 1998.</p>
+            <p>Levinas, Emmanuel. Otherwise than Being. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 1998.</p>
 
-          <p>Levinas, Emmanuel. Totality and Infinity: An Essay on Exteriority. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 2003.</p>
+            <p>Levinas, Emmanuel. Totality and Infinity: An Essay on Exteriority. Translated by Alphonso Lingis. Pennsylvania: Duquesne University Press, 2003.</p>
 
-          <p>Livet, Pierre. “Mitsein et intersubjectivité”, in « Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche, ed. Jean-Pierre Cometti and Dominique Janicaud, 151–165. Marseille: Sud, 1989.</p>
+            <p>Livet, Pierre. “Mitsein et intersubjectivité”, in « Être et temps » de Martin Heidegger : Questions de méthode et voies de recherche, ed. Jean-Pierre Cometti and Dominique Janicaud, 151–165. Marseille: Sud, 1989.</p>
 
-          <p>Raffoul, François. “Being and the Other: Ethics and Ontology in Levinas and Heidegger”. In Addressing Levinas, edited by Eric Sean Nelson, Antje Kapust, and Kent Still, 138–151. Illinois: Northwestern University Press, 2005.</p>
+            <p>Raffoul, François. “Being and the Other: Ethics and Ontology in Levinas and Heidegger”. In Addressing Levinas, edited by Eric Sean Nelson, Antje Kapust, and Kent Still, 138–151. Illinois: Northwestern University Press, 2005.</p>
 
-          <p>Raffoul François. “Derrida and the Ethics of the Im-possible”. Research in Phenomenology 38, no. 2 (2008): 270–290.</p>
+            <p>Raffoul François. “Derrida and the Ethics of the Im-possible”. Research in Phenomenology 38, no. 2 (2008): 270–290.</p>
 
-          <p>Raffoul François. The Origins of Responsibility. Indiana: Indiana University Press, 2010.</p>
+            <p>Raffoul François. The Origins of Responsibility. Indiana: Indiana University Press, 2010.</p>
 
-          <p>Raffoul, François. “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”. Symposium 2, no. 2 (1998): 211–222.</p>
+            <p>Raffoul, François. “The Subject of the Welcome: On Jacques Derrida’s Adieu à Emmanuel Levinas”. Symposium 2, no. 2 (1998): 211–222.</p>
+          </div>
 
           <h2 id="vita">Vita</h2>
           <p>Joshua Severud was born and raised in North Dakota and has used his study in philosophy as a way to learn about, explore, and understand the world in a significant, thoughtful way. He is passionate about ethics, intersubjectivity, and generally 19th and 20th century French thought. Joshua plans to receive his Masters May 2023.</p>
         </div>
       </div>
-
 
       <div id="footer">
         <div class="license">
